03 Kubernetes/01/demonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginxdaemon
  labels:
    app: nginxd
spec:
  selector:
    matchLabels:
      app: nginxd
  template:
    metadata:
      labels:
        app: nginxd
    spec:
      containers:
        - name: nginxd
          image: nginx:1.14.2
          ports:
            - containerPort: 80
