03 Kubernetes/01/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: staging
spec:
  containers:
    - name: nginx
      image: nginx:1.23.4
