03 Kubernetes/01/probes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: toolbox
spec:
  containers:
    - name: toolbox
      image: pnowy/toolbox:1.0.0
      command: ["sh", "-c", 'echo "Hello, Kubernetes!" && echo "Healthy!" > /tmp/healthy && sleep infinity']
      livenessProbe:
        initialDelaySeconds: 3
        periodSeconds: 5
        exec:
          command:
            - cat
            - /tmp/healthy
      resources:
        limits:
          cpu: "200m"
          memory: "32Mi"
        requests:
          cpu: "25m"
          memory: "16Mi"
