03 Kubernetes/01/headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-headless
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: app-pod
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: ClusterIP
  selector:
    app: app-pod
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-pod
  template:
    metadata:
      labels:
        app: app-pod
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: app
          image: app:1.0.0
          readinessProbe:
            httpGet:
              port: 5000
              path: "/health/readiness"
          livenessProbe:
            httpGet:
              port: 5000
              path: "/health/liveness"
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "64Mi"
          ports:
            - containerPort: 5000
              name: http
---
apiVersion: v1
kind: Pod
metadata:
  name: toolbox
spec:
  terminationGracePeriodSeconds: 0
  containers:
    - name: toolbox
      image: pnowy/toolbox:1.0.0
      command: ["sh", "-c"]
      args: # https://yaml-multiline.info/
        - >-
          sleep infinity
