03 Kubernetes/01/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
spec:
  # podinfo.127.0.0.1.nip.io httpbin.127.0.0.1.nip.io
  tls:
    - hosts:
        - podinfo.127.0.0.1.nip.io
        - httpbin.127.0.0.1.nip.io
      # mkcert --key-file key.pem --cert-file cert.pem podinfo.127.0.0.1.nip.io httpbin.127.0.0.1.nip.io
      # k create secret tls ingress-tls --key key.pem --cert cert.pem
      secretName: ingress-tls
  rules:
    - host: "podinfo.127.0.0.1.nip.io"
      # - host: "podinfo.k8s.course.przemeknowak.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  number: 8080
    - host: "httpbin.127.0.0.1.nip.io"
      # - host: "httpbin.k8s.course.przemeknowak.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  name: http
